<resources>
    <string name="app_name">Eventually</string>
    <string name="Eventually">LOGO EVENTUALLY</string>
    <string name="Login">Login</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Correo">Correo Electronico</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Cerrar_Sesion">Cerrar Sesión</string>
    <string name="Olvidacion">¿Olvidaste la contraseña?</string>
    <string name="Registrarse">¿No tienes cuenta?</string>
    <string name="Usuario">Apodo</string>
    <string name="Nombre">Nombre</string>
    <string name="CContraseña">Confirmar Contraseña</string>
    <string name="Email">E-Mail</string>
    <string name="Registro">REGISTRO</string>
    <string name="CRegistro">REGISTRARSE</string>
    <string name="Cancelar">CANCELAR</string>
    <string name="Recuperar">Recuperacion de contraseña</string>
    <string name="RecuperarC">Pofavor introduce tu correo electronico: </string>
    <string name="RecuperarE">Enviar</string>
    <string name="title_activity_principal_v2">Activity_principalV2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="main_fragment">Main Fragment</string>
    <string name="grupos_fragment">grupos fragment</string>
    <string name="opciones_de_registros">OPCIONES DE REGISTROS.</string>
    <string name="opciones">Opciones</string>
    <string name="crud_registros">CRUD REGISTROS</string>
    <string name="buscar">Buscar</string>
    <string name="ingrese_documento">Ingrese Documento</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="detalle_grupo">Detalle Grupo</string>
    <string name="mi_cuenta">Mi cuenta</string>
    <string name="mis_grupos">Mis grupos</string>
    <string name="intereses">Intereses</string>
    <string name="personalizar_cuenta">Personalizar cuenta</string>
    <string name="maestro">Maestro</string>
    <string name="personaliza_tu_cuenta">Personaliza tu cuenta</string>
    <string name="personaliza_tu_foto">Personaliza tu foto</string>
    <string name="personaliza_tus_datos">Personaliza Tus datos</string>
    <string name="enter">Enter</string>
    <string name="ingrese_su_documento">Ingrese su Documento</string>
    <string name="documento">Documento</string>
    <string name="ingrese_el_id_usuario">Ingrese el id Usuario</string>
    <string name="username">UserName</string>
    <string name="apellido">Apellido</string>
    <string name="crea_un_grupo">Crea un grupo!</string>
    <string name="nombre_del_grupo">Nombre del grupo</string>
    <string name="edad">Edad</string>
    <string name="edad_minima">Edad minima</string>
    <string name="restricci_n_de_genero">Restricción de Genero</string>
    <string name="ingrese_la_descripcion_del_grupo">Ingrese la descripcion del grupo</string>
    <string name="maximo_de_integrantes">Maximo de integrantes</string>
    <string name="etiqueta_del_grupo">Etiqueta del grupo</string>
    <string name="crear">Crear</string>
    <string name="nombre_grupo">Nombre Grupo:</string>
    <string name="nombre_grupos">Nombre Grupos</string>
    <string name="etiqueta">Etiqueta:</string>
    <string name="etiquetas">Etiquetas</string>
    <string name="descripcion">Descripcion:</string>
    <string name="descripcion_grupos">Descripcion_Grupos</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="buscar_grupos">Buscar Grupos</string>
    <string name="volver">Volver</string>
    <string name="default1">Default</string>
    <string name="participantes">Participantes</string>
    <string name="eventos">Eventos</string>
    <string name="title_activity_contenedor_instrucciones">ContenedorInstruccionesActivity</string>
    <string name="unirse">unirse</string>
    <string name="crear_evennto">Crear evento</string>
    <string name="volver_al_grupo">Volver al Grupo</string>
    <string name="pesonaliza_tu_cuenta">Pesonaliza tu cuenta</string>


</resources>
