<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".registros_admin">

    <TextView
        android:id="@+id/Txt_titulo_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/crud_registros"
        android:textStyle="bold"
        android:textSize="30sp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/Txt_Id_Usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/ingrese_el_id_usuario"
            android:textColorHint="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="25sp">
        </EditText>

        <Button
            android:id="@+id/Btn_Buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buscar"
            android:textStyle="bold"
            android:textSize="25sp">
        </Button>
    </LinearLayout>

    <EditText
        android:id="@+id/Txt_UserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/username"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary">
    </EditText>

    <EditText
        android:id="@+id/Txt_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/Email"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary">
    </EditText>

    <EditText
        android:id="@+id/Txt_Contra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/Contraseña"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary">
    </EditText>

    <EditText
        android:id="@+id/Txt_Contra_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/Contraseña"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary">
    </EditText>


    <Button
        android:id="@+id/Btn_Editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/editar"
        android:textStyle="bold"
        android:textSize="18sp">
    </Button>

    <Button
        android:id="@+id/Btn_Eliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/eliminar"
        android:textStyle="bold"
        android:textSize="18sp">
    </Button>

    <Button
        android:id="@+id/Btn_Cerrar_Sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/Cerrar_Sesion"
        android:textStyle="bold"
        android:textSize="18sp">
    </Button>


</LinearLayout>