<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.MisGruposFragment">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_grupo"
            android:textColor="@color/colorAzul_oscuro"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_weight="2">
        </TextView>
        <TextView
            android:id="@+id/Txt_Nombre_Grupo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_grupos"
            android:textColor="@color/colorAzul_TQM"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_weight=".8">
        </TextView>
        <TextView
            android:id="@+id/textIdGrupo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/etiqueta"
            android:textColor="@color/colorAzul_oscuro"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_weight="2">
        </TextView>
        <TextView
            android:id="@+id/Txt_Etiqueta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/etiquetas"
            android:textColor="@color/colorAzul_TQM"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_weight=".8">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:textColor="@color/colorAzul_oscuro"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_weight="2">
        </TextView>
        <TextView
            android:id="@+id/Txt_Descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_grupos"
            android:textColor="@color/colorAzul_Sutil"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_weight=".8">
        </TextView>

    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAzul_oscuro">
    </TextView>

</LinearLayout>