<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondoxd"
    tools:context=".registro_Usuarios">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="@font/amiko"
        android:text="@string/Registro"
        android:textColor="@color/colorAzul_Sutilmenos2"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:gravity="right"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:fontFamily="@font/amiko"
            android:hint="@string/Usuario"
            android:inputType="textPersonName"
            android:textColor="@color/colorAzul_Sutil"
            android:textColorHint="@color/colorAzul_Sutil"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:fontFamily="@font/amiko"
            android:hint="@string/Nombre"
            android:inputType="textPersonName"
            android:textColor="@color/colorAzul_Sutil"
            android:textColorHint="@color/colorAzul_Sutil"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/amiko"
            android:hint="@string/Contraseña"
            android:inputType="textPassword"
            android:textColor="@color/colorAzul_Sutil"
            android:textColorHint="@color/colorAzul_Sutil"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:fontFamily="@font/amiko"
            android:hint="@string/CContraseña"
            android:inputType="textPassword"
            android:textColor="@color/colorAzul_Sutil"
            android:textColorHint="@color/colorAzul_Sutil"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:fontFamily="@font/amiko"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAzul_Sutil"
            android:textColorHint="@color/colorAzul_Sutil"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:backgroundTint="@color/colorBoton_Prueba1"
            android:text="@string/CRegistro"
            android:textColor="@color/colorAzul_Sutil" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_weight="0"
            android:backgroundTint="@color/colorBoton_Prueba1"
            android:onClick="Login"
            android:text="@string/Cancelar"
            android:textColor="@color/colorAzul_Sutil" />
    </LinearLayout>

</LinearLayout>