<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".contranueva"
    android:background="@drawable/fondoxd">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="@font/amiko"
        android:text="@string/Recuperar"
        android:textAlignment="center"
        android:textColor="@color/colorAzul_TQM"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/RecuperarC"
        android:textColor="@color/colorAzul_oscuro"
        android:textSize="18sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_gravity="center"
        android:gravity="center"
        android:ems="10"
        android:hint="@string/Correo"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorAzul_Sutil"
        android:textStyle="bold"
        android:textColorHint="@color/colorAzul_Sutil"/>



    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorBotones"
        android:onClick="Enviar"
        android:text="@string/RecuperarE"
        android:textColor="@color/colorAzul_Sutil"
        android:layout_marginBottom="50dp"/>
</LinearLayout>