<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ValidacionPersonalizaCuente">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_gravity="center"
            android:text="@string/ingrese_su_documento"
            android:textSize="35sp">

        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_gravity="center"
            android:hint="@string/documento"
            android:textSize="25sp"
            android:inputType="number"
            android:id="@+id/Txt_Documento_E">

        </EditText>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_gravity="center"
            android:onClick="Ingresa"
            android:text="@string/enter"
            android:textSize="20sp"
            android:id="@+id/Btn_enter">

        </Button>
</LinearLayout>